# Robrain

./: .clang-format  .gitignore  CMakeLists.txt  README.md  calibration.cpp  especificaciones_tecnicas.typ
.github/workflows/: format.yml  test.yml
common/protocol/: ble_packet.h  packet.h  serial_packet.h  wireless_packet.h
common/types/: signal_types.h
docs/: CHECKPOINTLOG
firmware/arduino-emg/: .clangd  compile_commands.json  platformio.ini
firmware/arduino-emg/src/: emg.cpp  emg.h  emg_reader.cpp  emg_reader.h  main.cpp  muscles.h  serial_protocol.cpp  serial_protocol.h  signal_filter.cpp  signal_filter.h
firmware/arduino-emg/test/mock/: Arduino.h  HardwareSerial.h
firmware/arduino-emg/test/test_emg_reader/: test_emg_reader.cpp
firmware/arduino-emg/test/test_serial_protocol/: test_serial_protocol.cpp
firmware/arduino-emg/test/test_signal_filter/: test_signal_filter.cpp
firmware/esp32-robot/: .clangd  compile_commands.json  platformio.ini
firmware/esp32-robot/src/: main.cpp  motor_controller.cpp  motor_controller.h
firmware/esp32-robot/src/comm/: ble_handler.cpp  ble_handler.h
firmware/esp32-robot/src/motor/: motor_controller.cpp  motor_controller.h  wheel.cpp  wheel.h
firmware/esp32-robot/src/protocol/: command_parser.cpp  command_parser.h  wheel_command.cpp  wheel_command.h
firmware/esp32-robot/test/mock/: Arduino.h
firmware/esp32-robot/test/test_ble_handler/: test_ble_handler.cpp
firmware/esp32-robot/test/test_command_parser/: test_command_parser.cpp
firmware/esp32-robot/test/test_motor_controller/: test_motor_controller.cpp
host/: CMakeLists.txt
host/src/: main.cpp
host/src/processing/: signal_processor.cpp  signal_processor.h
host/src/protocol/: message.cpp  message.h
host/src/serial/: arduino_comm.cpp  arduino_comm.h  scsp.h
host/src/wireless/: ble_client.h  ble_client.mm
scripts/: setup-clangd.sh
